--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#1e5f7a" />
-  <!-- Chart.js desde CDN (ligero y offline-capable si ya se cargó antes) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -56,9 +55,29 @@
     <section id="actions">
       <button id="export">📤 Exportar</button>
       <button id="import">📥 Importar</button>
-      <input type="file" id="import-file" accept=".json" style="display:none" />
     </section>
   </main>
+
+  <!-- Modales para iPhone -->
+  <div id="exportModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000; padding:20px; box-sizing:border-box;">
+    <div style="background:white; padding:20px; border-radius:12px; max-width:600px; margin:40px auto; max-height:80vh; overflow:auto;">
+      <h3>📤 Copia estos datos</h3>
+      <p style="font-size:0.9em; color:#666;">Pégalo en Notas, Archivos o envíalo por correo para respaldarlo.</p>
+      <textarea id="exportData" rows="10" style="width:100%; padding:10px; margin:10px 0; border:1px solid #ccc; border-radius:6px; font-family:monospace; font-size:14px;"></textarea>
+      <button id="copyBtn" style="background:#1e5f7a; color:white; border:none; padding:10px 16px; border-radius:6px; cursor:pointer;">📋 Copiar al portapapeles</button>
+      <button id="closeExport" style="background:#ccc; margin-left:10px; border:none; padding:10px 16px; border-radius:6px; cursor:pointer;">Cerrar</button>
+    </div>
+  </div>
+
+  <div id="importModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000; padding:20px; box-sizing:border-box;">
+    <div style="background:white; padding:20px; border-radius:12px; max-width:600px; margin:40px auto; max-height:80vh; overflow:auto;">
+      <h3>📥 Pega tus datos aquí</h3>
+      <p style="font-size:0.9em; color:#666;">Copia el texto que exportaste antes y pégalo aquí.</p>
+      <textarea id="importData" rows="10" style="width:100%; padding:10px; margin:10px 0; border:1px solid #ccc; border-radius:6px; font-family:monospace; font-size:14px;"></textarea>
+      <button id="pasteImportBtn" style="background:#1e5f7a; color:white; border:none; padding:10px 16px; border-radius:6px; cursor:pointer;">✅ Importar</button>
+      <button id="closeImport" style="background:#ccc; margin-left:10px; border:none; padding:10px 16px; border-radius:6px; cursor:pointer;">Cerrar</button>
+    </div>
+  </div>
 
   <script src="app.js"></script>
 </body>
